--- a/src/app/routes-management/routes-management.component.html
+++ b/src/app/routes-management/routes-management.component.html
@@ -19,7 +19,7 @@
         </mat-form-field>
 
       </div>
-      <img src="/assets/Delete.png" (click)="removeRoute(routeIndex)"
+      <img src="/assets/trash.svg" (click)="removeRoute(routeIndex)"
            style="position: absolute; top: 5px; left: 15px; width: 15px; height: 15px; cursor: pointer;">
     </div>
     <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event, routeIndex)">
