--- a/src/app/management-table/management-table.component.html
+++ b/src/app/management-table/management-table.component.html
@@ -14,21 +14,23 @@
       <th mat-header-cell *matHeaderCellDef>מזרח</th>
       <td mat-cell *matCellDef="let model">{{model.point.E}}</td>
     </ng-container>
+    
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>פעולות</th>
       <td mat-cell *matCellDef="let model">
-        <img src="/assets/edit.png" style="width: 15px; height: 15px; cursor: pointer;" (click)="editPoint(model)">
-        <img src="/assets/Delete.png" style="width: 15px; height: 15px; cursor: pointer;" (click)="deletePoint(model)">
+        <img src="/assets/edit.svg" class="actionButton" (click)="editPoint(model)">
+        <img src="/assets/trash.svg" class="actionButton" (click)="deletePoint(model)">
       </td>
     </ng-container>
+
     <ng-container *ngFor="let aircraft of aircraftArray; trackBy: trackByIndex"
                   matColumnDef="time-{{aircraft.aircraftId}}">
       <th mat-header-cell *matHeaderCellDef>
-        <img src="/assets/edit.png" style="width: 15px; height: 15px; cursor: pointer;"
-             (click)="editAircraft(aircraft)">
-        <img src="/assets/Delete.png" style="width: 15px; height: 15px; cursor: pointer;"
-             (click)="deleteAircraft(aircraft)">
-        <label mat-sort-header="">{{getAircraftTypeName(aircraft) + ' ' + aircraft.aircraftId}}</label>
+        <img src="/assets/edit.svg" class="actionButton" (click)="editAircraft(aircraft)">
+        <img src="/assets/trash.svg" class="actionButton" (click)="deleteAircraft(aircraft)">
+        <img src="/assets/clock.svg" class="actionButton" (click)="offsetAircraftTime(aircraft)">
+
+        <label mat-sort-header="" style="text-align: center;">{{getAircraftTypeName(aircraft) + ' ' + aircraft.aircraftId}}</label>
       </th>
       <td mat-cell *matCellDef="let model">
         <div style="display: flex;flex-direction: column; width: 100px;">
