--- a/src/app/management-table/management-table.component.less
+++ b/src/app/management-table/management-table.component.less
@@ -14,6 +14,17 @@
 //mat-header-cell {
 //  min-width: 100px;
 //}
+
+.actionButton {
+  height: 16px;
+  padding: 5px;
+  border-radius: 4px;
+  &:hover {
+    cursor: pointer;
+    background-color: #f4f4f4;
+  }
+}
+
 .example-container {
   //overflow: auto;
 }
