add: error text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
   <img src="../assets/headerLogo.svg" height="100px">
   
   <br>
-  רק רגע
+  <span [textContent]="loadingText"></span>
+  <p ></p>
 </div>
 
 <div class="container">
