--- a/src/styles.less
+++ b/src/styles.less
@@ -4,3 +4,12 @@
 * {
   direction: rtl;
 }
+
+.tooltip {
+  padding: 5px;
+  background-color: rgb(255, 10, 63) !important;
+  font-size: 12px;
+  position: relative;
+  left: 10px;
+  top: -1px;
+}
