--- a/src/app/management-table/management-table.component.less
+++ b/src/app/management-table/management-table.component.less
@@ -15,6 +15,15 @@
 //  min-width: 100px;
 //}
 
+button {
+  border: none;
+  background: none;
+  padding: 0;
+  outline: none;
+}
+
+
+
 .actionButton {
   height: 16px;
   padding: 5px;
@@ -22,7 +31,14 @@
   &:hover {
     cursor: pointer;
     background-color: #f4f4f4;
+    &.dangerousDelete {
+      background-color: red;
+      .warningDelete {
+        visibility: visible;
+      }
+    }
   }
+
 }
 
 .example-container {
