--- a/src/app/management-table/management-table.component.less
+++ b/src/app/management-table/management-table.component.less
@@ -79,6 +79,7 @@ th.mat-column-position, td.mat-column-position {
   font-weight: 700;
   color: black;
   font-size: 14px;
+  padding-right: 10px !important;
 }
 
 /deep/ .mat-sort-header-container {
