--- a/src/styles.less
+++ b/src/styles.less
@@ -3,6 +3,7 @@
 
 * {
   direction: rtl;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .tooltip {
@@ -12,4 +13,15 @@
   position: relative;
   left: 10px;
   top: -1px;
+}
+
+button {
+  padding: 9px;
+  background-color: #f4f4f4;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    background-color: #f9f9f9;
+  }
 }
